<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="ui_inverted_mode"
        android:title="@string/dark_ui"
        android:summary="@string/dark_ui_summary" />

    <PreferenceCategory
        android:key="bootani"
        android:title="@string/bootani_cat">

        <Preference
            android:key="custom_bootanimation"
            android:title="@string/custom_bootanimation_title"
            android:summary="@string/custom_bootanimation_summary" />

        <CheckBoxPreference
            android:key="disable_bootanimation"
            android:title="@string/disable_bootanimation_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="notification"
        android:title="@string/notification_cat">

        <Preference
            android:key="custom_carrier_label"
            android:title="@string/custom_carrier_label_title" />

        <CheckBoxPreference
            android:key="status_bar_carrier_label"
            android:title="@string/show_carrier_label_title"
            android:summary="@string/show_carrier_label_summary"
            android:defaultValue="false" />

        <Preference
            android:key="notification_wallpaper"
            android:title="@string/notification_wallpaper_title"
            android:summary="@string/notification_wallpaper_summary" />

        <Preference
            android:key="notification_wallpaper_alpha"
            android:title="@string/notif_wallpaper_alpha_title" />

        <CheckBoxPreference
            android:key="status_bar_notif_count"
            android:title="@string/status_bar_notif_count_title"
            android:summary="@string/status_bar_notif_count_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="missed_call_breath"
            android:title="@string/missed_call_breath"
            android:summary="@string/missed_call_breath_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="pref_low_battery_warning_policy"
            android:title="@string/pref_low_battery_warning_policy_title"
            android:dialogTitle="@string/pref_low_battery_warning_policy_dialog_title"
            android:entries="@array/pref_low_battery_warning_policy_entries"
            android:entryValues="@array/pref_low_battery_warning_policy_values"
            android:defaultValue="0" />

        <CheckBoxPreference
            android:key="vibrate_notif_expand"
            android:title="@string/vibrate_notif_expand_title"
            android:summary="@string/vibrate_notif_expand_summary" />

        <CheckBoxPreference
            android:key="statusbar_brightness_slider"
            android:title="@string/brightness_slider_title"
            android:summary="@string/brightness_slider_summary" />

        <CheckBoxPreference
            android:key="ime_switcher"
            android:title="@string/ime_switcher_title"
            android:summary="@string/ime_switcher_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="navbar"
        android:title="@string/navbar_cat">

        <CheckBoxPreference
            android:key="hide_extras"
            android:title="@string/hide_extras"
            android:summary="@string/hide_extras_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="force_dualpanel"
            android:title="@string/multipane_ui"
            android:summary="@string/multipane_ui_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_cat">

    <Preference
        android:key="transparency_dialog"
        android:title="@string/transparency_dialog_title" />

        <Preference
            android:key="lockscreen_wallpaper"
            android:title="@string/lockscreen_wallpaper_title"
            android:summary="@string/lockscreen_wallpaper_summary" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="lock_color_alpha"
            android:title="@string/ls_color_alpha_title"
            android:summary="@string/ls_color_alpha_summary"
            android:defaultValue="0x70000000"
            alphaSlider="true" />

        <CheckBoxPreference
            android:key="show_overflow"
            android:title="@string/show_overflow_title"
            android:summary="@string/show_overflow_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="rotate_180"
            android:title="@string/rotate_180_title"
            android:summary="@string/rotate_180_summary" />

        <CheckBoxPreference
            android:key="rotate_270"
            android:title="@string/rotate_270_title"
            android:summary="@string/rotate_270_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="wakeup_when_plugged_unplugged"
            android:title="@string/wakeup_when_plugged_unplugged_title"
            android:summary="@string/wakeup_when_plugged_unplugged_summary"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="system_power_crt_screen_off"
            android:summary="@string/system_power_crt_screen_off_summary"
            android:title="@string/system_power_crt_screen_off_title" />

        <ListPreference
            android:key="system_power_crt_mode"
            android:dialogTitle="@string/system_power_crt_mode_dialog_title"
            android:title="@string/system_power_crt_mode_title"
            android:entries="@array/entries_system_power_crt_mode"
            android:entryValues="@array/values_system_power_crt_mode"
            android:dependency="system_power_crt_screen_off" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="recents"
        android:title="@string/recents_cat">

        <ListPreference
            android:key="pref_recents_clear"
            android:title="@string/recents_kill_all"
            android:entries="@array/recents_clear_entries"
            android:entryValues="@array/recents_clear_values"
            android:defaultValue="2" />

        <ListPreference
            android:key="pref_recents_style"
            android:title="@string/recents_style"
            android:entries="@array/recents_style_entries"
            android:entryValues="@array/recents_style_values"
            android:defaultValue="1" />

        <CheckBoxPreference
            android:key="ram_usage_bar"
            android:title="@string/ram_bar"
            android:summary="@string/ram_bar_summary" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="network"
        android:title="@string/status_bar_network_title">

        <CheckBoxPreference
            android:key="status_bar_show_network_stats"
            android:title="@string/status_bar_show_network_stats_title"
            android:defaultValue="false" />

        <ListPreference
            android:key="status_bar_network_status_update"
            android:dialogTitle="@string/status_bar_network_stats_update_title"
            android:title="@string/status_bar_network_stats_update_title"
            android:entries="@array/entries_status_bar_network_stats_update"
            android:entryValues="@array/values_status_bar_network_stats_update"
            android:dependency="status_bar_show_network_stats" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="status_bar_network_color"
            android:title="@string/status_bar_network_color_title"
            android:defaultValue="@android:color/holo_blue_light"
            android:dependency="status_bar_show_network_stats" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="misc"
        android:title="@string/misc_short">

        <CheckBoxPreference
            android:key="longpress_to_kill"
            android:title="@string/longpress_to_kill"
            android:summary="@string/longpress_to_kill_summary" />

        <ListPreference
            android:key="expanded_desktop"
            android:title="@string/power_menu_expanded_desktop"
            android:entries="@array/expanded_desktop_entries"
            android:entryValues="@array/expanded_desktop_values"
            android:persistent="false" />

        <CheckBoxPreference
            android:key="status_bar_auto_hide"
            android:title="@string/auto_hide_statusbar"
            android:summary="@string/auto_hide_statusbar_summary"
            android:defaultValue="false" />

        <CheckBoxPreference
            android:key="status_bar_quick_peek"
            android:title="@string/statusbar_quick_peek_title"
            android:summary="@string/statusbar_quick_peek_summary"
            android:defaultValue="false" />

        <ListPreference
            android:key="statusbar_swipe_timeout"
            android:entries="@array/statusbar_swipe_timeout_entries"
            android:entryValues="@array/statusbar_swipe_timeout_values"
            android:title="@string/statusbar_swipe_timeout_title"
            android:summary="@string/statusbar_swipe_timeout_summary"
            android:dependency="status_bar_quick_peek" />

        <PreferenceScreen
            android:key="lock_clock"
            android:title="@string/lock_clock_title"
            android:summary="@string/lock_clock_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.cyanogenmod.lockclock"
                android:targetClass="com.cyanogenmod.lockclock.preference.Preferences" />
       </PreferenceScreen> 

    </PreferenceCategory>

</PreferenceScreen>
